<resources>
    <string name="app_name">Convert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="program_converter">Program Converter</string>
    <string name="rupiah">Rupiah</string>
    <string name="convert">Convert</string>
    <string name="dolar">Dolar</string>
    <string name="yen">Yen</string>
    <string name="baht">Baht</string>
    <string name="logout">Logout</string>
</resources>